# SeisSol

./: .gitignore  .gitmodules  CMakeLists.txt  Jenkinsfile  SConstruct
Documentation/: Doxyfile  index.rst  tpv13.rst
auto_tuning/proxy/: CMakeLists.txt  Device  customBLAS
auto_tuning/proxy/cmake/: auxiliary.cmake  process_users_input.cmake
auto_tuning/proxy/src/: necessary_sources.cmake  output_helper.hpp  proxy_seissol.cpp  proxy_seissol_allocator.hpp  proxy_seissol_integrators.hpp  proxy_seissol_modified_integrators.hpp
auto_tuning/proxy/static_generated_kernels_double/generated_code/: KernelTest.t.h  init.cpp  init.h  kernel.cpp  kernel.h  tensor.cpp  tensor.h
auto_tuning/proxy/static_generated_kernels_single/generated_code/: kernel.cpp  kernel.h  performance.cpp  subroutine.h  tensor.cpp  tensor.h
auto_tuning/proxy/validation/: elements-1001_repeats-3_mode-all_precision-4.h5  elements-1001_repeats-3_mode-all_precision-8.h5  elements-100_repeats-3_mode-all_precision-4.h5  elements-100_repeats-3_mode-all_precision-8.h5  elements-25_repeats-1_mode-all_precision-8.h5  elements-33_repeats-2_mode-all_precision-4.h5  elements-3_repeats-3_mode-all_precision-4.h5  elements-3_repeats-3_mode-all_precision-8.h5  elements-55_repeats-3_mode-all_precision-8.h5  elements-77_repeats-3_mode-all_precision-4.h5
cmake/: process_users_input.cmake
dev_documentation/: Doxyfile
dev_documentation/extra_pages/: mainpage.dox
generated_code/: Plasticity.py  aderdg.py  generate-cuda.py  generate.py  poroelastic.py
generated_code/matrices/: matrices_poroelastic.xml
generated_code/tmp/: KernelTest.t.h  init.cpp  init.h  kernel.cpp  tensor.cpp  tensor.h
preprocessing/meshing/gmsh2gambit/src/: GAMBITWriter.h
src/: main.cpp  sources.cmake
src/Equations/: datastructures.hpp
src/Equations/elastic/Kernels/: Interface.hpp  Local.cpp  Neighbor.cpp  Time.cpp
src/Equations/poroelastic/Model/: PoroelasticJacobian.h  PoroelasticSetup.h  datastructures.hpp  debug.cpp  integrationData.hpp
src/Initializer/: CellLocalMatrices.cpp  GlobalData.cpp  GlobalData.h  LTS.cpp  LTS.h  MemoryAllocator.cpp  MemoryAllocator.h  dg_setup.f90  log  typedefs.hpp
src/Initializer/tree/: Common.hpp  DeviceVarInfo.cpp  DeviceVarInfo.hpp  LTSInternalNode.hpp  LTSTree.hpp  Layer.hpp  Node.hpp
src/Kernels/: Local.h  Neighbor.h  Time.h  TimeCommon.cpp  TimeCommon.h
src/Model/: common.cpp  common.hpp
src/Physics/: InitialField.cpp
src/Reader/: readpar.f90
src/ResultWriter/: FaultWriterF.f90  ReceiverWriter.cpp  ini_faultoutput.f90
src/Solver/: Interoperability.cpp
src/Solver/time_stepping/: MiniSeisSol.cpp  TimeCluster.h
